@startuml

title __DATABASE's Class Diagram__\n

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.database {
      abstract class AntlDatabase {
          {static} - INSTANCE : AntlDatabase
          {static} - sRoomDatabaseCallback : Callback
          {abstract} + userDao()
          {abstract} + eventDao()
          {abstract} + contactDao()
          {abstract} + eventDateDao()
          {static} + getDatabase()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.database {
      class DropDatabaseAsync {
          # doInBackground()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.database {
      class PopulateDbAsync {
          ~ PopulateDbAsync()
          + getURLForResource()
          # doInBackground()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.infrastructure.database {
      class SetMainUser {
          + SetMainUser()
          # doInBackground()
      }
    }
  }
  

  AntlDatabase -up-|> RoomDatabase
  AntlDatabase +-down- DropDatabaseAsync
  AntlDatabase +-down- PopulateDbAsync
  AntlDatabase +-down- SetMainUser
  DropDatabaseAsync -up-|> AsyncTask
  PopulateDbAsync -up-|> AsyncTask
  PopulateDbAsync o-- EventDao : _EventDao
  PopulateDbAsync o-- EventDateDao : mEventDateDao
  PopulateDbAsync o-- UserDao : _UserDao
  PopulateDbAsync o-- FriendDao : _FriendDao
  SetMainUser -up-|> AsyncTask
  SetMainUser o-- UserDao : mUserDao
  SetMainUser o-- UserDto : mUserDto


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
